@@ -1,6 +1,7 @@
 import abc
 import os
 import typing
+import warnings
 import weakref
 import rpy2.rinterface
 import rpy2.rinterface_lib.callbacks
@@ -90,6 +91,7 @@ class RObjectMixin(abc.ABC):
     __readlines = rpy2.rinterface.baseenv.find("readLines")
     __unlink = rpy2.rinterface.baseenv.find("unlink")
     __show = _get_exported_value('methods', 'show')
+    __print = _get_exported_value('base', 'print')
 
     __slots = None
 
@@ -109,7 +111,17 @@ class RObjectMixin(abc.ABC):
         with (rpy2.rinterface_lib
               .callbacks.obj_in_module(rpy2.rinterface_lib.callbacks,
                                        'consolewrite_print', s.append)):
-            self.__show(self)
+            try:
+                self.__show(self)
+                # There can be situation where an invalid call to R`s
+                # show is made. Possibly some form of signature overriding
+                # that goes through in R through dispatch (although it
+                # should not?). In that case this is an problem upstream
+                # and this try/except is a workaround until it gets fixed.
+                # (issue #908).
+            except rpy2.rinterface.embedded.RRuntimeError as rre:
+                warnings.warn(f'Invalid call to "show()" in R: {rre}')
+                self.__print(self)
         s = str.join('', s)
         return s
 
